--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Battleship!</title>
     <link rel="stylesheet" href="css/style.css">
   <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -12,22 +12,34 @@
   <script src="js/app.js"></script>
 </head>
 <body>
-    <div class="complete_game">
-      <header>BATTLESHIP</header>
-        <div class="titles">
-          <div class="name" id="computer_name">COMPUTER</div>
-          <div class="name" id="user_name">PLAYER</div>
+  <div class="complete_game">
+    <header>BATTLESHIP</header>
+    <div class="titles">
+          <div class="name" id="computer_name">PLAYER 1</div>
+          <div class="name" id="user_name">PLAYER 2</div>
         </div>
         <div class="gameplay_container">
-          <div class="user_ships" id="player1_ships">P 1 SHIPS</div>
+          <div class="user_ships" id="player1_ships">P 1 SHIPS
+            <div class="ship" id="P1carrier">Carrier</div>
+            <div class="ship" id="P1Battleship">Battleship</div>
+            <div class="ship" id="P1Cruiser">Cruiser</div>
+            <div class="ship" id="P1Submarine">Submarine</div>
+            <div class="ship" id="P1Destroyer">Destroyer</div>
+          </div>
           <div class="board" id="player1_board"></div>
           <div class="statistics">STATISTICS</div>
           <div class="board" id="player2_board"></div>
-          <div class="player_ships" id="player2_ships">P 2 SHIPS</div>
+          <div class="player_ships" id="player2_ships">P 2 SHIPS
+            <div class="ship" id="P2carrier">Carrier</div>
+            <div class="ship" id="P2Battleship">Battleship</div>
+            <div class="ship" id="P2Cruiser">Cruiser</div>
+            <div class="ship" id="P2Submarine">Submarine</div>
+            <div class="ship" id="P2Destroyer">Destroyer</div>
+          </div>
         </div>
         <div class="bottom_container">
-          <div class="destroyed_ships" id="player1_destroyed">DESTROYED</div>
-          <div class="destroyed_ships" id="player2_destroyed">DESTROYED</div>
+          <div class="destroyed_ships" id="player1_destroyed">PLAYER 1 SHIPS SUNK</div>
+          <div class="destroyed_ships" id="player2_destroyed">PLAYER 2 SHIPS SUNK</div>
         </div>
 
     </div>
