--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Battleship!</title>
     <link rel="stylesheet" href="css/style.css">
-  <script
-  src="https://code.jquery.com/jquery-3.2.1.min.js"
-  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+    <link rel="stylesheet" href="css/jquery-ui.css">
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+  <script src="js/jquery-ui.js"></script>
   <script src="js/app.js"></script>
+  <script> $(function() {  
+    $( ".ship" ).draggable({ 
+      containment: ".board",
+      grid: [ 16, 17 ],
+     });  
+  });  
+</script>
 </head>
 <body>
   <div class="complete_game">
@@ -20,21 +28,41 @@
         </div>
         <div class="gameplay_container">
           <div class="user_ships" id="player1_ships">P 1 SHIPS
-            <div class="ship" id="P1carrier">Carrier</div>
-            <div class="ship" id="P1Battleship">Battleship</div>
-            <div class="ship" id="P1Cruiser">Cruiser</div>
-            <div class="ship" id="P1Submarine">Submarine</div>
-            <div class="ship" id="P1Destroyer">Destroyer</div>
+            <div class="ship carrier" id="P1carrier">
+              <p>Carrier</p>
+            </div>
+            <div class="ship battleship" id="P1Battleship">
+              <p>Battleship</p>
+            </div>
+            <div class="ship cruiser" id="P1Cruiser">
+              <p>Cruiser</p>
+            </div>
+            <div class="ship submarine" id="P1Submarine">
+              <p>Submarine</p>
+            </div>
+            <div class="ship destroyer" id="P1Destroyer">
+              <p>Destroyer</p>
+            </div>
           </div>
           <div class="board" id="player1_board"></div>
           <div class="statistics">STATISTICS</div>
           <div class="board" id="player2_board"></div>
           <div class="player_ships" id="player2_ships">P 2 SHIPS
-            <div class="ship" id="P2carrier">Carrier</div>
-            <div class="ship" id="P2Battleship">Battleship</div>
-            <div class="ship" id="P2Cruiser">Cruiser</div>
-            <div class="ship" id="P2Submarine">Submarine</div>
-            <div class="ship" id="P2Destroyer">Destroyer</div>
+            <div class="ship carrier" id="P2carrier">
+              <p>Carrier</p>
+            </div>
+            <div class="ship battleship" id="P2Battleship">
+              <p>Battleship</p>
+            </div>
+            <div class="ship cruiser" id="P2Cruiser">
+              <p>Cruiser</p>
+            </div>
+            <div class="ship submarine" id="P2Submarine">
+              <p>Submarine</p>
+            </div>
+            <div class="ship destroyer" id="P2Destroyer">
+              <p>Destroyer</p>
+            </div>
           </div>
         </div>
         <div class="bottom_container">
