made random placement of player 1 ship on board

--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@
         </div>
         <div class="bottom_container">
           <div class="destroyed_ships" id="player1_destroyed">PLAYER 1 SHIPS SUNK</div>
+          <div>
+            <input type="button" class="start_button" name="start_game" value="Start Game!"> 
+          </div>
           <div class="destroyed_ships" id="player2_destroyed">PLAYER 2 SHIPS SUNK</div>
         </div>
 
