--- a/index.html
+++ b/index.html
@@ -22,64 +22,64 @@
         </div>
         <div class="gameplay_container">
           <div class="player1_ships">P 1 SHIPS
-            <div class="P1ship carrier" id="P1carrier">
-              <div class="shipContents" id="P1car1"></div>
-              <div class="shipContents" id="P1car2"></div>
-              <div class="shipContents" id="P1car3"></div>
-              <div class="shipContents" id="P1car4"></div>
-              <div class="shipContents" id="P1car5"></div>
+            <div class="P1ship carrier" id="P1Carrier">
+              <div class="player1ShipContents" id="P1car1"></div>
+              <div class="player1ShipContents" id="P1car2"></div>
+              <div class="player1ShipContents" id="P1car3"></div>
+              <div class="player1ShipContents" id="P1car4"></div>
+              <div class="player1ShipContents" id="P1car5"></div>
             </div>
             <div class="P1ship battleship" id="P1Battleship">
-              <div class="shipContents" id="P1bat1"></div>
-              <div class="shipContents" id="P1bat2"></div>
-              <div class="shipContents" id="P1bat3"></div>
-              <div class="shipContents" id="P1bat4"></div>
+              <div class="player1ShipContents" id="P1bat1"></div>
+              <div class="player1ShipContents" id="P1bat2"></div>
+              <div class="player1ShipContents" id="P1bat3"></div>
+              <div class="player1ShipContents" id="P1bat4"></div>
             </div>
             <div class="P1ship cruiser" id="P1Cruiser">
-              <div class="shipContents" id="P1cruz1"></div>
-              <div class="shipContents" id="P1cruz2"></div>
-              <div class="shipContents" id="P1cruz3"></div>
+              <div class="player1ShipContents" id="P1cruz1"></div>
+              <div class="player1ShipContents" id="P1cruz2"></div>
+              <div class="player1ShipContents" id="P1cruz3"></div>
             </div>
             <div class="P1ship submarine" id="P1Submarine">
-              <div class="shipContents" id="P1sub1"></div>
-              <div class="shipContents" id="P1sub2"></div>
-              <div class="shipContents" id="P1sub3"></div>
+              <div class="player1ShipContents" id="P1sub1"></div>
+              <div class="player1ShipContents" id="P1sub2"></div>
+              <div class="player1ShipContents" id="P1sub3"></div>
             </div>
             <div class="P1ship destroyer" id="P1Destroyer">
-              <div class="shipContents" id="P1dest1"></div>
-              <div class="shipContents" id="P1dest2"></div>
+              <div class="player1ShipContents" id="P1dest1"></div>
+              <div class="player1ShipContents" id="P1dest2"></div>
             </div>
           </div>
           <div class="board" id="player1_board"></div>
           <div class="statistics">STATISTICS</div>
           <div class="board" id="player2_board"></div>
           <div class="player2_ships">P 2 SHIPS
-            <div class="P2ship carrier" id="P2carrier">
-              <div class="shipContents" id="P2car1"></div>
-              <div class="shipContents" id="P2car2"></div>
-              <div class="shipContents" id="P2car3"></div>
-              <div class="shipContents" id="P2car4"></div>
-              <div class="shipContents" id="P2car5"></div>
+            <div class="P2ship carrier" id="P2Carrier">
+              <div class="player2ShipContents" id="P2car1"></div>
+              <div class="player2ShipContents" id="P2car2"></div>
+              <div class="player2ShipContents" id="P2car3"></div>
+              <div class="player2ShipContents" id="P2car4"></div>
+              <div class="player2ShipContents" id="P2car5"></div>
             </div>
             <div class="P2ship battleship" id="P2Battleship">
-              <div class="shipContents" id="P2bat1"></div>
-              <div class="shipContents" id="P2bat2"></div>
-              <div class="shipContents" id="P2bat3"></div>
-              <div class="shipContents" id="P2bat4"></div>
+              <div class="player2ShipContents" id="P2bat1"></div>
+              <div class="player2ShipContents" id="P2bat2"></div>
+              <div class="player2ShipContents" id="P2bat3"></div>
+              <div class="player2ShipContents" id="P2bat4"></div>
             </div>
             <div class="P2ship cruiser" id="P2Cruiser">
-              <div class="shipContents" id="P2cruz1"></div>
-              <div class="shipContents" id="P2cruz2"></div>
-              <div class="shipContents" id="P2cruz3"></div>
+              <div class="player2ShipContents" id="P2cruz1"></div>
+              <div class="player2ShipContents" id="P2cruz2"></div>
+              <div class="player2ShipContents" id="P2cruz3"></div>
             </div>
             <div class="P2ship submarine" id="P2Submarine">
-              <div class="shipContents" id="P2sub1"></div>
-              <div class="shipContents" id="P2sub2"></div>
-              <div class="shipContents" id="P2sub3"></div>
+              <div class="player2ShipContents" id="P2sub1"></div>
+              <div class="player2ShipContents" id="P2sub2"></div>
+              <div class="player2ShipContents" id="P2sub3"></div>
             </div>
             <div class="P2ship destroyer" id="P2Destroyer">
-              <div class="shipContents" id="P2dest1"></div>
-              <div class="shipContents" id="P2dest2"></div>
+              <div class="player2ShipContents" id="P2dest1"></div>
+              <div class="player2ShipContents" id="P2dest2"></div>
             </div>
           </div>
         </div>
