--- a/index.html
+++ b/index.html
@@ -22,64 +22,64 @@
         </div>
         <div class="gameplay_container">
           <div class="player1_ships">P 1 SHIPS
-            <div class="P1ship carrier" id="P1Carrier">
-              <div class="player1ShipContents" id="P1car1"></div>
-              <div class="player1ShipContents" id="P1car2"></div>
-              <div class="player1ShipContents" id="P1car3"></div>
-              <div class="player1ShipContents" id="P1car4"></div>
-              <div class="player1ShipContents" id="P1car5"></div>
+            <div class="p1ship carrier" id="p1Carrier">
+              <div class="player1ShipContents" id="p1Carrier"></div>
+              <div class="player1ShipContents" id="p1Carrier"></div>
+              <div class="player1ShipContents" id="p1Carrier"></div>
+              <div class="player1ShipContents" id="p1Carrier"></div>
+              <div class="player1ShipContents" id="p1Carrier"></div>
             </div>
-            <div class="P1ship battleship" id="P1Battleship">
-              <div class="player1ShipContents" id="P1bat1"></div>
-              <div class="player1ShipContents" id="P1bat2"></div>
-              <div class="player1ShipContents" id="P1bat3"></div>
-              <div class="player1ShipContents" id="P1bat4"></div>
+            <div class="p1ship battleship" id="p1Battleship">
+              <div class="player1ShipContents" id="p1Battleship1"></div>
+              <div class="player1ShipContents" id="p1Battleship2"></div>
+              <div class="player1ShipContents" id="p1Battleship3"></div>
+              <div class="player1ShipContents" id="p1Battleship4"></div>
             </div>
-            <div class="P1ship cruiser" id="P1Cruiser">
-              <div class="player1ShipContents" id="P1cruz1"></div>
-              <div class="player1ShipContents" id="P1cruz2"></div>
-              <div class="player1ShipContents" id="P1cruz3"></div>
+            <div class="p1ship cruiser" id="p1Cruiser">
+              <div class="player1ShipContents" id="p1Cruiser1"></div>
+              <div class="player1ShipContents" id="p1Cruiser2"></div>
+              <div class="player1ShipContents" id="p1Cruiser3"></div>
             </div>
-            <div class="P1ship submarine" id="P1Submarine">
-              <div class="player1ShipContents" id="P1sub1"></div>
-              <div class="player1ShipContents" id="P1sub2"></div>
-              <div class="player1ShipContents" id="P1sub3"></div>
+            <div class="p1ship submarine" id="p1Submarine">
+              <div class="player1ShipContents" id="p1Submarine1"></div>
+              <div class="player1ShipContents" id="p1Submarine2"></div>
+              <div class="player1ShipContents" id="p1Submarine3"></div>
             </div>
-            <div class="P1ship destroyer" id="P1Destroyer">
-              <div class="player1ShipContents" id="P1dest1"></div>
-              <div class="player1ShipContents" id="P1dest2"></div>
+            <div class="p1ship destroyer" id="p1Destroyer">
+              <div class="player1ShipContents" id="p1Destroyer1"></div>
+              <div class="player1ShipContents" id="p1Destroyer2"></div>
             </div>
           </div>
           <div class="board" id="player1_board"></div>
           <div class="statistics">STATISTICS</div>
           <div class="board" id="player2_board"></div>
           <div class="player2_ships">P 2 SHIPS
-            <div class="P2ship carrier" id="P2Carrier">
-              <div class="player2ShipContents" id="P2car1"></div>
-              <div class="player2ShipContents" id="P2car2"></div>
-              <div class="player2ShipContents" id="P2car3"></div>
-              <div class="player2ShipContents" id="P2car4"></div>
-              <div class="player2ShipContents" id="P2car5"></div>
+            <div class="p2ship carrier" id="p2Carrier">
+              <div class="player2ShipContents" id="p2Carrier1"></div>
+              <div class="player2ShipContents" id="p2Carrier2"></div>
+              <div class="player2ShipContents" id="p2Carrier3"></div>
+              <div class="player2ShipContents" id="p2Carrier4"></div>
+              <div class="player2ShipContents" id="p2Carrier5"></div>
             </div>
-            <div class="P2ship battleship" id="P2Battleship">
-              <div class="player2ShipContents" id="P2bat1"></div>
-              <div class="player2ShipContents" id="P2bat2"></div>
-              <div class="player2ShipContents" id="P2bat3"></div>
-              <div class="player2ShipContents" id="P2bat4"></div>
+            <div class="p2ship battleship" id="p2Battleship">
+              <div class="player2ShipContents" id="p2Battleship1"></div>
+              <div class="player2ShipContents" id="p2Battleship2"></div>
+              <div class="player2ShipContents" id="p2Battleship3"></div>
+              <div class="player2ShipContents" id="p2Battleship4"></div>
             </div>
-            <div class="P2ship cruiser" id="P2Cruiser">
-              <div class="player2ShipContents" id="P2cruz1"></div>
-              <div class="player2ShipContents" id="P2cruz2"></div>
-              <div class="player2ShipContents" id="P2cruz3"></div>
+            <div class="p2ship cruiser" id="p2Cruiser">
+              <div class="player2ShipContents" id="p2Cruiser1"></div>
+              <div class="player2ShipContents" id="p2Cruiser2"></div>
+              <div class="player2ShipContents" id="p2Cruiser3"></div>
             </div>
-            <div class="P2ship submarine" id="P2Submarine">
-              <div class="player2ShipContents" id="P2sub1"></div>
-              <div class="player2ShipContents" id="P2sub2"></div>
-              <div class="player2ShipContents" id="P2sub3"></div>
+            <div class="p2ship submarine" id="p2Submarine">
+              <div class="player2ShipContents" id="p2Submarine1"></div>
+              <div class="player2ShipContents" id="p2Submarine2"></div>
+              <div class="player2ShipContents" id="p2Submarine3"></div>
             </div>
-            <div class="P2ship destroyer" id="P2Destroyer">
-              <div class="player2ShipContents" id="P2dest1"></div>
-              <div class="player2ShipContents" id="P2dest2"></div>
+            <div class="p2ship destroyer" id="p2Destroyer">
+              <div class="player2ShipContents" id="p2Destroyer1"></div>
+              <div class="player2ShipContents" id="p2Destroyer2"></div>
             </div>
           </div>
         </div>
