computer ship auto shooting back

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
           <div class="board" id="player2_board"></div>
           <div class="player2_ships">P 2 SHIPS
             <div class="p2ship carrier" id="p2Carrier">
-              <div class="player2ShipContents" id="p2Carrier1"></div>
-              <div class="player2ShipContents" id="p2Carrier2"></div>
-              <div class="player2ShipContents" id="p2Carrier3"></div>
-              <div class="player2ShipContents" id="p2Carrier4"></div>
-              <div class="player2ShipContents" id="p2Carrier5"></div>
+              <div class="player2ShipContents" id="p2Carrier"></div>
+              <div class="player2ShipContents" id="p2Carrier"></div>
+              <div class="player2ShipContents" id="p2Carrier"></div>
+              <div class="player2ShipContents" id="p2Carrier"></div>
+              <div class="player2ShipContents" id="p2Carrier"></div>
             </div>
             <div class="p2ship battleship" id="p2Battleship">
               <div class="player2ShipContents" id="p2Battleship1"></div>
