computer ship score is working

--- a/index.html
+++ b/index.html
@@ -30,24 +30,24 @@
               <div class="player1ShipContents" id="p1Carrier"></div>
             </div>
             <div class="p1ship battleship" id="p1Battleship">
-              <div class="player1ShipContents" id="p1Battleship1"></div>
-              <div class="player1ShipContents" id="p1Battleship2"></div>
-              <div class="player1ShipContents" id="p1Battleship3"></div>
-              <div class="player1ShipContents" id="p1Battleship4"></div>
+              <div class="player1ShipContents" id="p1Battleship"></div>
+              <div class="player1ShipContents" id="p1Battleship"></div>
+              <div class="player1ShipContents" id="p1Battleship"></div>
+              <div class="player1ShipContents" id="p1Battleship"></div>
             </div>
             <div class="p1ship cruiser" id="p1Cruiser">
-              <div class="player1ShipContents" id="p1Cruiser1"></div>
-              <div class="player1ShipContents" id="p1Cruiser2"></div>
-              <div class="player1ShipContents" id="p1Cruiser3"></div>
+              <div class="player1ShipContents" id="p1Cruiser"></div>
+              <div class="player1ShipContents" id="p1Cruiser"></div>
+              <div class="player1ShipContents" id="p1Cruiser"></div>
             </div>
             <div class="p1ship submarine" id="p1Submarine">
-              <div class="player1ShipContents" id="p1Submarine1"></div>
-              <div class="player1ShipContents" id="p1Submarine2"></div>
-              <div class="player1ShipContents" id="p1Submarine3"></div>
+              <div class="player1ShipContents" id="p1Submarine"></div>
+              <div class="player1ShipContents" id="p1Submarine"></div>
+              <div class="player1ShipContents" id="p1Submarine"></div>
             </div>
             <div class="p1ship destroyer" id="p1Destroyer">
-              <div class="player1ShipContents" id="p1Destroyer1"></div>
-              <div class="player1ShipContents" id="p1Destroyer2"></div>
+              <div class="player1ShipContents" id="p1Destroyer"></div>
+              <div class="player1ShipContents" id="p1Destroyer"></div>
             </div>
           </div>
           <div class="board" id="player1_board"></div>
