started styling page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
   <div class="complete_game">
     <header>BATTLESHIP</header>
     <div class="titles">
-          <div class="name" id="computer_name">PLAYER 1</div>
-          <div class="name" id="user_name">PLAYER 2</div>
-        </div>
-        <div class="gameplay_container">
-          <div class="player1_ships">P 1 SHIPS
+      <h2>PLAYER 1</h2>
+      <h2>PLAYER 2</h2>
+    </div>
+    <div class="titles">
+      <h3>PLAYER 1 SHIPS</h3>
+      <h3>STATISTICS</h3>
+      <h3>PLAYER 2 SHIPS</h3>
+    </div>
+    <div class="gameplay_container">
+      <div class="player1_ships">
             <div class="p1ship carrier" id="p1Carrier">
               <div class="player1ShipContents" id="p1Carrier"></div>
               <div class="player1ShipContents" id="p1Carrier"></div>
@@ -51,9 +56,8 @@
             </div>
           </div>
           <div class="board" id="player1_board"></div>
-          <div class="statistics">STATISTICS</div>
           <div class="board" id="player2_board"></div>
-          <div class="player2_ships">P 2 SHIPS
+          <div class="player2_ships">
             <div class="p2ship carrier" id="p2Carrier">
               <div class="player2ShipContents" id="p2Carrier1"></div>
               <div class="player2ShipContents" id="p2Carrier2"></div>
@@ -84,11 +88,11 @@
           </div>
         </div>
         <div class="bottom_container">
-          <div class="destroyed_ships" id="player1_destroyed">PLAYER 1 SHIPS SUNK</div>
+          <div class="destroyed_ships" id="player1_destroyed">SHIPS LOST</div>
           <div>
             <input type="button" class="start_button" name="start_game" value="Start Game!"> 
           </div>
-          <div class="destroyed_ships" id="player2_destroyed">PLAYER 2 SHIPS SUNK</div>
+          <div class="destroyed_ships" id="player2_destroyed">SHIPS LOST</div>
         </div>
 
     </div>
