--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
   crossorigin="anonymous"></script>
+  
   <script src="js/jquery-ui.js"></script>
   <script src="js/app.js"></script>
+  <!------- TOUCH PUNCH by Dave Furfero- PLEASE SEE README.txt FOR CREDITS ------>
+  <script src="js/jquery-ui.touch-punch.min.js"></script>
 </script>
 </head>
 <body>
