style in a pretty good place. game is up and running

--- a/index.html
+++ b/index.html
@@ -31,31 +31,31 @@
     <div class="gameplay_container">
       <div class="player1_ships">
             <div class="p1ship carrier" id="p1Carrier">
-              <div class="player1ShipContents" id="p1Carrier"></div>
-              <div class="player1ShipContents" id="p1Carrier"></div>
-              <div class="player1ShipContents" id="p1Carrier"></div>
-              <div class="player1ShipContents" id="p1Carrier"></div>
-              <div class="player1ShipContents" id="p1Carrier"></div>
+              <div class="player1ShipContents" id="p1Carrier p1Ca1"></div>
+              <div class="player1ShipContents" id="p1Carrier p1Ca2"></div>
+              <div class="player1ShipContents" id="p1Carrier p1Ca3"></div>
+              <div class="player1ShipContents" id="p1Carrier p1Ca4"></div>
+              <div class="player1ShipContents" id="p1Carrier p1Ca5"></div>
             </div>
             <div class="p1ship battleship" id="p1Battleship">
-              <div class="player1ShipContents" id="p1Battleship"></div>
-              <div class="player1ShipContents" id="p1Battleship"></div>
-              <div class="player1ShipContents" id="p1Battleship"></div>
-              <div class="player1ShipContents" id="p1Battleship"></div>
+              <div class="player1ShipContents" id="p1Battleship p1Ba1"></div>
+              <div class="player1ShipContents" id="p1Battleship p1Ba2"></div>
+              <div class="player1ShipContents" id="p1Battleship p1Ba3"></div>
+              <div class="player1ShipContents" id="p1Battleship p1Ba4"></div>
             </div>
             <div class="p1ship cruiser" id="p1Cruiser">
-              <div class="player1ShipContents" id="p1Cruiser"></div>
-              <div class="player1ShipContents" id="p1Cruiser"></div>
-              <div class="player1ShipContents" id="p1Cruiser"></div>
+              <div class="player1ShipContents" id="p1Cruiser p1Cr1"></div>
+              <div class="player1ShipContents" id="p1Cruiser p1Cr2"></div>
+              <div class="player1ShipContents" id="p1Cruiser p1Cr3"></div>
             </div>
             <div class="p1ship submarine" id="p1Submarine">
-              <div class="player1ShipContents" id="p1Submarine"></div>
-              <div class="player1ShipContents" id="p1Submarine"></div>
-              <div class="player1ShipContents" id="p1Submarine"></div>
+              <div class="player1ShipContents" id="p1Submarine p1Su1"></div>
+              <div class="player1ShipContents" id="p1Submarine p1Su2"></div>
+              <div class="player1ShipContents" id="p1Submarine p1Su3"></div>
             </div>
             <div class="p1ship destroyer" id="p1Destroyer">
-              <div class="player1ShipContents" id="p1Destroyer"></div>
-              <div class="player1ShipContents" id="p1Destroyer"></div>
+              <div class="player1ShipContents" id="p1Destroyer p1De1"></div>
+              <div class="player1ShipContents" id="p1Destroyer p1De2"></div>
             </div>
           </div>
           <div class="board" id="player1_board"></div>
