--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
       <h2>PLAYER 2</h2>
     </div>
     <div class="titles">
-      <h3>PLAYER 1 SHIPS</h3>
+      <h3 class='red'>PLAYER 1 SHIPS</h3>
       <h3>STATISTICS</h3>
-      <h3>PLAYER 2 SHIPS</h3>
+      <h3 class='blue'>PLAYER 2 SHIPS</h3>
     </div>
     <div class="gameplay_container">
       <div class="player1_ships">
