made overall design more responsive

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
   <div class="complete_game">
     <header>BATTLESHIP</header>
     <div class="titles">
-      <h2>PLAYER 1</h2>
-      <h2>PLAYER 2</h2>
+      <h2 class='red'>COMPUTER</h2>
+      <h2 class='blue'>PLAYER</h2>
     </div>
     <div class="titles">
-      <h3 class='red'>PLAYER 1 SHIPS</h3>
-      <h3>STATISTICS</h3>
-      <h3 class='blue'>PLAYER 2 SHIPS</h3>
+      <h3 class='red'>SHIPS</h3>
+      <h3 class='stats'>STATISTICS</h3>
+      <h3 class='blue'>SHIPS</h3>
     </div>
     <div class="gameplay_container">
       <div class="player1_ships">
@@ -90,7 +90,7 @@
             </div>
           </div>
         </div>
-        <div class="bottom_container">
+        <div class="bottom_titles">
           <div class="destroyed_ships" id="player1_destroyed">SHIPS LOST</div>
           <div>
             <input type="button" class="start_button" name="start_game" value="Start Game!"> 
