added statistics section.. started displaying data on start

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             <h6 class="stats" id="gamesWon">Games Won</h6>
             <h6 class="stats" id="gamesLost">Games Lost</h6>
             <h6 class="stats" id="shotsFired">Shots Fired</h6>
-            <h6 class="stats" id="hits">Hits</h6>
-            <h6 class="stats" id="misses">Misses</h6>
+            <h6 class="stats" id="shotsHit">Hits</h6>
+            <h6 class="stats" id="shotsMissed">Misses</h6>
           </div>
           <div class="board" id="player2_board"></div>
           <div class="player2_ships">
