--- a/index.html
+++ b/index.html
@@ -30,81 +30,80 @@
     </div>
     <div class="gameplay_container">
       <div class="player1_ships">
-            <div class="p1ship carrier" id="p1Carrier">
-              <div class="player1ShipContents" id="p1Carrier p1Ca1"></div>
-              <div class="player1ShipContents" id="p1Carrier p1Ca2"></div>
-              <div class="player1ShipContents" id="p1Carrier p1Ca3"></div>
-              <div class="player1ShipContents" id="p1Carrier p1Ca4"></div>
-              <div class="player1ShipContents" id="p1Carrier p1Ca5"></div>
-            </div>
-            <div class="p1ship battleship" id="p1Battleship">
-              <div class="player1ShipContents" id="p1Battleship p1Ba1"></div>
-              <div class="player1ShipContents" id="p1Battleship p1Ba2"></div>
-              <div class="player1ShipContents" id="p1Battleship p1Ba3"></div>
-              <div class="player1ShipContents" id="p1Battleship p1Ba4"></div>
-            </div>
-            <div class="p1ship cruiser" id="p1Cruiser">
-              <div class="player1ShipContents" id="p1Cruiser p1Cr1"></div>
-              <div class="player1ShipContents" id="p1Cruiser p1Cr2"></div>
-              <div class="player1ShipContents" id="p1Cruiser p1Cr3"></div>
-            </div>
-            <div class="p1ship submarine" id="p1Submarine">
-              <div class="player1ShipContents" id="p1Submarine p1Su1"></div>
-              <div class="player1ShipContents" id="p1Submarine p1Su2"></div>
-              <div class="player1ShipContents" id="p1Submarine p1Su3"></div>
-            </div>
-            <div class="p1ship destroyer" id="p1Destroyer">
-              <div class="player1ShipContents" id="p1Destroyer p1De1"></div>
-              <div class="player1ShipContents" id="p1Destroyer p1De2"></div>
-            </div>
-          </div>
-          <div class="board" id="player1_board"></div>
-          <div class="statsDiv">
-            <h6 class="stats" id="gamesWon">WINS</h6>
-            <h6 class="stats" id="gamesLost">LOSSES</h6>
-            <h6 class="stats" id="shotsFired">Shots Fired</h6>
-            <h6 class="stats" id="shotsHit">Hits</h6>
-            <h6 class="stats" id="shotsMissed">Misses</h6>
-          </div>
-          <div class="board" id="player2_board"></div>
-          <div class="player2_ships">
-            <div class="p2ship carrier" id="p2Carrier">
-              <div class="player2ShipContents" id="p2Carrier1"></div>
-              <div class="player2ShipContents" id="p2Carrier2"></div>
-              <div class="player2ShipContents" id="p2Carrier3"></div>
-              <div class="player2ShipContents" id="p2Carrier4"></div>
-              <div class="player2ShipContents" id="p2Carrier5"></div>
-            </div>
-            <div class="p2ship battleship" id="p2Battleship">
-              <div class="player2ShipContents" id="p2Battleship1"></div>
-              <div class="player2ShipContents" id="p2Battleship2"></div>
-              <div class="player2ShipContents" id="p2Battleship3"></div>
-              <div class="player2ShipContents" id="p2Battleship4"></div>
-            </div>
-            <div class="p2ship cruiser" id="p2Cruiser">
-              <div class="player2ShipContents" id="p2Cruiser1"></div>
-              <div class="player2ShipContents" id="p2Cruiser2"></div>
-              <div class="player2ShipContents" id="p2Cruiser3"></div>
-            </div>
-            <div class="p2ship submarine" id="p2Submarine">
-              <div class="player2ShipContents" id="p2Submarine1"></div>
-              <div class="player2ShipContents" id="p2Submarine2"></div>
-              <div class="player2ShipContents" id="p2Submarine3"></div>
-            </div>
-            <div class="p2ship destroyer" id="p2Destroyer">
-              <div class="player2ShipContents" id="p2Destroyer1"></div>
-              <div class="player2ShipContents" id="p2Destroyer2"></div>
-            </div>
-          </div>
+        <div class="p1ship carrier" id="p1Carrier">
+          <div class="player1ShipContents" id="p1Carrier p1Ca1"></div>
+          <div class="player1ShipContents" id="p1Carrier p1Ca2"></div>
+          <div class="player1ShipContents" id="p1Carrier p1Ca3"></div>
+          <div class="player1ShipContents" id="p1Carrier p1Ca4"></div>
+          <div class="player1ShipContents" id="p1Carrier p1Ca5"></div>
         </div>
-        <div class="bottom_titles">
-          <div class="destroyed_ships" id="player1_destroyed">SHIPS LOST</div>
-          <div>
-            <input type="button" class="start_button" name="start_game" value="Start Game!"> 
-          </div>
-          <div class="destroyed_ships" id="player2_destroyed">SHIPS LOST</div>
+        <div class="p1ship battleship" id="p1Battleship">
+          <div class="player1ShipContents" id="p1Battleship p1Ba1"></div>
+          <div class="player1ShipContents" id="p1Battleship p1Ba2"></div>
+          <div class="player1ShipContents" id="p1Battleship p1Ba3"></div>
+          <div class="player1ShipContents" id="p1Battleship p1Ba4"></div>
+        </div>
+        <div class="p1ship cruiser" id="p1Cruiser">
+          <div class="player1ShipContents" id="p1Cruiser p1Cr1"></div>
+          <div class="player1ShipContents" id="p1Cruiser p1Cr2"></div>
+          <div class="player1ShipContents" id="p1Cruiser p1Cr3"></div>
+        </div>
+        <div class="p1ship submarine" id="p1Submarine">
+          <div class="player1ShipContents" id="p1Submarine p1Su1"></div>
+          <div class="player1ShipContents" id="p1Submarine p1Su2"></div>
+          <div class="player1ShipContents" id="p1Submarine p1Su3"></div>
+        </div>
+        <div class="p1ship destroyer" id="p1Destroyer">
+          <div class="player1ShipContents" id="p1Destroyer p1De1"></div>
+          <div class="player1ShipContents" id="p1Destroyer p1De2"></div>
         </div>
       </div>
+        <div class="board" id="player1_board"></div>
+        <div class="statsDiv">
+          <h6 class="stats" id="gamesWon">WINS</h6>
+          <h6 class="stats" id="gamesLost">LOSSES</h6>
+          <h6 class="stats" id="shotsFired">Shots Fired</h6>
+          <h6 class="stats" id="shotsHit">Hits</h6>
+          <h6 class="stats" id="shotsMissed">Misses</h6>
+        </div>
+        <div class="board" id="player2_board"></div>
+        <div class="player2_ships">
+          <div class="p2ship carrier" id="p2Carrier">
+            <div class="player2ShipContents" id="p2Carrier1"></div>
+            <div class="player2ShipContents" id="p2Carrier2"></div>
+            <div class="player2ShipContents" id="p2Carrier3"></div>
+            <div class="player2ShipContents" id="p2Carrier4"></div>
+            <div class="player2ShipContents" id="p2Carrier5"></div>
+          </div>
+          <div class="p2ship battleship" id="p2Battleship">
+            <div class="player2ShipContents" id="p2Battleship1"></div>
+            <div class="player2ShipContents" id="p2Battleship2"></div>
+            <div class="player2ShipContents" id="p2Battleship3"></div>
+            <div class="player2ShipContents" id="p2Battleship4"></div>
+          </div>
+          <div class="p2ship cruiser" id="p2Cruiser">
+            <div class="player2ShipContents" id="p2Cruiser1"></div>
+            <div class="player2ShipContents" id="p2Cruiser2"></div>
+            <div class="player2ShipContents" id="p2Cruiser3"></div>
+          </div>
+          <div class="p2ship submarine" id="p2Submarine">
+            <div class="player2ShipContents" id="p2Submarine1"></div>
+            <div class="player2ShipContents" id="p2Submarine2"></div>
+            <div class="player2ShipContents" id="p2Submarine3"></div>
+          </div>
+          <div class="p2ship destroyer" id="p2Destroyer">
+            <div class="player2ShipContents" id="p2Destroyer1"></div>
+            <div class="player2ShipContents" id="p2Destroyer2"></div>
+          </div>
+        </div>
+      </div>
+          <input type="button" class="start_button" name="start_game" value="Start Game!"> 
     </div>
+      <!-- <div class="bottom_titles"> -->
+        <!-- <div class="destroyed_ships" id="player1_destroyed">SHIPS LOST</div>
+        <div> -->
+        <!-- <div class="destroyed_ships" id="player2_destroyed">SHIPS LOST</div>
+      </div> -->
+    <!-- </div> -->
 </body>
 </html>
